--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "author": "Chai Phonbopit",
   "license": "MIT",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "chai": "^4.2.0",
+    "ethereum-waffle": "^3.0.0",
+    "ethers": "^5.0.0",
     "hardhat": "2.9.3"
   }
 }
